# spartan-farmer

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: commands.rs  crypto.rs  farm.rs  main.rs  plot.rs  plotter.rs  utils.rs
src/commands/: farm.rs  plot.rs  sim.rs
src/plot/: commitments.rs
