[package]
name = "spartan-farmer"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
dirs = "3.0.1"
env_logger = "0.8.3"
jsonrpsee = "0.1.0"
serde_json = "1.0.64"
schnorrkel = "0.10.1"

[dependencies.async-std]
features = ["attributes"]
version = "1.9.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.125"
