[package]
name = "spartan-farmer"
version = "0.0.1"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2018"

[dependencies]
async-global-executor = "2.0.2"
clap = "3.0.0-beta.2"
dirs = "3.0.1"
env_logger = "0.8.3"
event-listener-primitives = "0.2.2"
futures = "0.3.13"
indicatif = "0.15.0"
jsonrpsee = "0.1.0"
log = "0.4.14"
rayon = "1.5.0"
ring = "0.16.20"
rocksdb = "0.15.0"
serde_json = "1.0.64"
schnorrkel = "0.10.1"
spartan = { git= "https://github.com/subspace/spartan.git" }
thiserror = "1.0.24"

[dependencies.async-std]
features = ["attributes"]
version = "1.9.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.125"

[dev-dependencies]
rand = "0.8.3"
